# XNode

./: CMakeLists.txt  client.cpp  client.h  command.cpp  command.h  main.cpp  message.h  reporter.cpp  reporter.h  server.cpp  server.h  xnode.cpp  xnode.h
Application/: CMakeLists.txt  command.cpp  command.h  config.json  host.cpp  host.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor.cpp  monitor.h  monitorservice.cpp  monitorservice.h
bak2/: CMakePresets.json  CMakeUserPresets.json
bak2/BuildExample/: CMakeLists.txt
bak2/ConanExample/: CMakeLists.txt  CMakeUserPresets.json
bak2/Server/: CMakeLists.txt  main.cpp
bak2/bak/: CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
bak2/bak/Client/: CMakeLists.txt  main.cpp
bak2/bak/Monitor/: CMakeLists.txt
bak2/bak/NodeClient/: CMakeLists.txt  CMakeLists.txt.user.2479e71  client.cpp  client.h  main.cpp
bak2/bak/NodeLibrary/: CMakeLists.txt  CMakeLists.txt.user.2479e71  NodeLibrary_global.h  message.cpp  message.h  nodelibrary.cpp  nodelibrary.h  servernode.cpp  servernode.h
bak2/bak/NodeServer/: CMakeLists.txt  CMakeLists.txt.user.2479e71  main.cpp  server.cpp  server.h
bak2/bak/StandAloneNode/: CMakeLists.txt  CMakeLists.txt.user.675462a  main.cpp  standalonenode.cpp  standalonenode.h
bak2/bak/build-Client-unknown-Debug/: CMakeCache.txt  (+2 more)
bak2/build-BuildExample-unknown-Debug/: CMakeCache.txt  cmake_install.cmake
bak2/build-ConanExample-unknown-Debug/: CMakeCache.txt  cmake_install.cmake
bak2/build-compressor-unknown-Debug/: CMakeCache.txt  CMakeCache.txt.prev  cmake_install.cmake
bak2/compressor/: CMakeLists.txt  CMakeUserPresets.json
(+40 files in other folders)
